# openbrain

./: .gitignore  .mcp.json  AGENTS.md  AGENT_BEHAVIOR_PROMPT.md  AGENT_OPERATING_MODEL.md  CLAUDE.md  COMMAND_CENTER_SCHEDULES.md  DESIGN_SPEC.md  DIAGRAMS.md  Dockerfile  MCP_INTEGRATIONS.md  README.md  RUNTIME_ARCHITECTURE.md  SYSTEM_BLUEPRINT.md  TRIAGE_AGENT_PROMPT.md  USER_JOURNEYS.md  docker-compose.yml  example.env  openbrain-migration-items.md  pyproject.toml
.claude/agents/: cleanup.md  goal-maintainer.md  openbrain-planner.md  openbrain-triage.md  taxonomy-maintainer.md  triage.md
.claude/hooks/: README.md  reinject-claude-md.py  safety-check.py  test-safety-patterns.py
.claude/skills/data-models/: SKILL.md
.codex/: config.toml
deployment/: common.ps1  deploy.ps1  set-env-vars.ps1  setup-infrastructure.ps1  smoke-test.ps1
deployment/templates/: foundry-resource-project.bicep  foundry-resource-project.json
prompts/: daily-briefing.md  heartbeat.md  nightly-ping.md
scripts/: seed_openbrain_items.py  seed_openbrain_pilot.py
src/openbrain/: __main__.py  config.py  cosmos_client.py  embedding.py  mcp_server.py
src/openbrain/auth/: dev_auth.py
src/openbrain/models/: __init__.py  common.py  goal.py  idea.py  memory.py  misc.py  review.py  task.py  user_settings.py
src/openbrain/services/: document_service.py  embedding_service.py
src/openbrain/tools/: tools.py
src/openbrain/utils/: errors.py  telemetry.py
tests/: conftest.py  test_auth.py  test_document_service.py  test_embedding_service.py  test_models.py  test_scenarios.py  test_tools.py
